fix scrollbar on large displays

--- a/src/components/styles/NavigationalWarnings.css
+++ b/src/components/styles/NavigationalWarnings.css
@@ -36,6 +36,30 @@
     flex-grow: 1;
 }
 
+
+
+::-webkit-scrollbar {
+    width: 8px;          
+    height: 8px;  
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+    margin: 25px;
+  }
+  
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #ffffff; 
+    border-radius: 6px;   
+    height: 8px;
+  }
+  
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+  
 /* Media Query for Mobile View */
 @media (max-width: 884px) { /* Adjust the max-width as needed */
     .NavigationalDisplay {
